--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <!-- Chat Header -->
         <div class="chat-header">
             <h2><i class="fas fa-comment-dots"></i> KSFE Assistant</h2>
+            <button id="clear-btn" title="Clear Chat History"><i class="fas fa-trash"></i></button>
             <button id="close-btn"><i class="fas fa-times"></i></button>
         </div>
         <!-- Chat Box -->
